Fix 3: Account page height max and overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -314,6 +314,7 @@ body {
     --selected-height-calc: calc(var(--selected-height-calc-vars));
     --selected-subs-height-calc: calc(var(--selected-subs-height-calc-vars));
     --feed-height-calc: calc(var(--feed-height-calc-vars));
+    --account-height-calc: calc(var(--account-height-calc-vars));
   }
 }
 
@@ -405,6 +406,7 @@ body {
     --selected-height-calc: calc(var(--selected-height-calc-vars));
     --selected-subs-height-calc: calc(var(--selected-subs-height-calc-vars));
     --feed-height-calc: calc(var(--feed-height-calc-vars));
+    --account-height-calc: calc(var(--account-height-calc-vars));
   }
 }
 
